--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
-github: vedxp
-ko_fi: vedxp
-buy_me_a_coffee: vedxp
-custom: ["https://paypal.me/vedxp"]
+# github: vedxp
+# ko_fi: vedxp
+# buy_me_a_coffee: vedxp
+# custom: ["https://paypal.me/vedxp"]
